I want to train my first model

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -98,25 +98,21 @@
     "from sklearn.metrics import classification_report,confusion_matrix\n",
     "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "import os\n",
+    "import cv2\n",
     "from PIL import Image"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. Reading the Data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Helper function for calling\n",
+    "\n",
+    "\n",
     "labels = ['PNEUMONIA', 'NORMAL']\n",
     "img_size = 150\n",
+    "\n",
     "def get_training_data(data_dir):\n",
     "    data = [] \n",
     "    for label in labels: \n",
@@ -125,11 +121,23 @@
     "        for img in os.listdir(path):\n",
     "            try:\n",
     "                img_arr = cv2.imread(os.path.join(path, img), cv2.IMREAD_GRAYSCALE)\n",
-    "                resized_arr = cv2.resize(img_arr, (img_size, img_size)) # Reshaping images to preferred size\n",
-    "                data.append([resized_arr, class_num])\n",
+    "                \n",
+    "                # Check if img_arr is not empty before resizing\n",
+    "                if img_arr is not None:\n",
+    "                    resized_arr = cv2.resize(img_arr, (img_size, img_size))\n",
+    "                    data.append([resized_arr, class_num])\n",
+    "                else:\n",
+    "                    print(f\"Skipped image: {os.path.join(path, img)} - Empty or invalid image\")\n",
     "            except Exception as e:\n",
-    "                print(e)      \n",
-    "    return np.array(data)"
+    "                print(f\"Error processing image: {os.path.join(path, img)} - {str(e)}\")\n",
+    "    return np.array(data, dtype=object)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Reading the Data"
    ]
   },
   {
@@ -164,85 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "train_data_dir = 'chest_xray/train'\n",
-    "validation_data_dir = 'chest_xray/val'\n",
-    "test_data_dir = 'chest_xray/test'\n"
+    "train = 'chest_xray/train'\n",
+    "val = 'chest_xray/val'\n",
+    "test = 'chest_xray/test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\HP\\Documents\\Projects\\Phase4\\Notebook.ipynb Cell 19\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X31sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m l \u001b[39m=\u001b[39m []\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X31sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m train_data_dir:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X31sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m(i[\u001b[39m1\u001b[39;49m] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X31sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         l\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39mPneumonia\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X31sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "#Data visualization\n",
-    "l = []\n",
-    "for i in train_data_dir:\n",
-    "    if(i[1] == 0):\n",
-    "        l.append(\"Pneumonia\")\n",
-    "    else:\n",
-    "        l.append(\"Normal\")\n",
-    "sns.set_style('darkgrid')\n",
-    "sns.countplot(l)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\HP\\Documents\\Projects\\Phase4\\Notebook.ipynb Cell 20\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X32sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Assuming train_data_dir is a list of lists with [image_array, class_number]\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X32sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m l \u001b[39m=\u001b[39m []\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X32sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m _, class_number \u001b[39min\u001b[39;00m train_data_dir:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X32sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mif\u001b[39;00m class_number \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/HP/Documents/Projects/Phase4/Notebook.ipynb#X32sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         l\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39mPneumonia\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
-     ]
-    }
-   ],
-   "source": [
-    "# Assuming train_data_dir is a list of lists with [image_array, class_number]\n",
-    "l = []\n",
-    "\n",
-    "for _, class_number in train_data_dir:\n",
-    "    if class_number == 0:\n",
-    "        l.append(\"Pneumonia\")\n",
-    "    else:\n",
-    "        l.append(\"Normal\")\n",
-    "\n",
-    "# Create a countplot to visualize the class distribution\n",
-    "sns.set_style('darkgrid')\n",
-    "plt.figure(figsize=(8, 6))  # Adjust the figure size if needed\n",
-    "sns.countplot(l)\n",
-    "plt.xlabel(\"Class\")\n",
-    "plt.ylabel(\"Count\")\n",
-    "plt.title(\"Class Distribution in Training Data\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +199,7 @@
    ],
    "source": [
     "# Define the path to your training directory\n",
-    "train_dir = train_data_dir\n",
+    "train_dir = train\n",
     "\n",
     "# Get a list of subdirectories in the training directory (each subdirectory represents a class)\n",
     "class_dirs = os.listdir(train_dir)\n",
@@ -281,39 +222,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Normalization and Data Augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train = get_training_data('chest_xray/train')\n",
+    "val = get_training_data('chest_xray/val')\n",
+    "test = get_training_data('chest_xray/test')\n",
+    "\n",
+    "x_train = []\n",
+    "y_train = []\n",
+    "\n",
+    "x_val = []\n",
+    "y_val = []\n",
+    "\n",
+    "x_test = []\n",
+    "y_test = []\n",
+    "\n",
+    "for feature, label in train:\n",
+    "    x_train.append(feature)\n",
+    "    y_train.append(label)\n",
+    "\n",
+    "for feature, label in test:\n",
+    "    x_test.append(feature)\n",
+    "    y_test.append(label)\n",
+    "\n",
+    "for feature, label in val:\n",
+    "    x_val.append(feature)\n",
+    "    y_val.append(label)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5216, 150, 150)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The CNN converges faster on [0..1] so normalize the data\n",
+    "x_train = np.array(x_train) / 255\n",
+    "x_val = np.array(x_val) / 255\n",
+    "x_test = np.array(x_test) / 255\n",
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5216,)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# resize data \n",
+    "X_train = x_train.reshape(-1, img_size, img_size, 1)\n",
+    "Y_train = np.array(y_train)\n",
+    "\n",
+    "X_val = x_val.reshape(-1, img_size, img_size, 1)\n",
+    "Y_val = np.array(y_val)\n",
+    "\n",
+    "X_test = x_test.reshape(-1, img_size, img_size, 1)\n",
+    "Y_test = np.array(y_test)\n",
+    "Y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With data augmentation to prevent overfitting and handling the imbalance in dataset\n",
+    "\n",
+    "datagen = ImageDataGenerator(\n",
+    "        featurewise_center=False,  # set input mean to 0 over the dataset\n",
+    "        samplewise_center=False,  # set each sample mean to 0\n",
+    "        featurewise_std_normalization=False,  # divide inputs by std of the dataset\n",
+    "        samplewise_std_normalization=False,  # divide each input by its std\n",
+    "        zca_whitening=False,  # apply ZCA whitening\n",
+    "        rotation_range = 30,  # randomly rotate images in the range (degrees, 0 to 180)\n",
+    "        zoom_range = 0.2, # Randomly zoom image \n",
+    "        width_shift_range=0.1,  # randomly shift images horizontally (fraction of total width)\n",
+    "        height_shift_range=0.1,  # randomly shift images vertically (fraction of total height)\n",
+    "        horizontal_flip = True,  # randomly flip images\n",
+    "        vertical_flip=False)  # randomly flip images\n",
+    "\n",
+    "\n",
+    "datagen.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train shape: (5216, 150, 150)\n",
+      "x_val shape: (16, 150, 150)\n",
+      "x_test shape: (622, 150, 150)\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(x_train) > 0:\n",
+    "    x_train = np.array(x_train) / 255\n",
+    "    print(\"x_train shape:\", x_train.shape)\n",
+    "else:\n",
+    "    print(\"x_train is empty\")\n",
+    "\n",
+    "if len(x_val) > 0:\n",
+    "    x_val = np.array(x_val) / 255\n",
+    "    print(\"x_val shape:\", x_val.shape)\n",
+    "else:\n",
+    "    print(\"x_val is empty\")\n",
+    "\n",
+    "if len(x_test) > 0:\n",
+    "    x_test = np.array(x_test) / 255\n",
+    "    print(\"x_test shape:\", x_test.shape)\n",
+    "else:\n",
+    "    print(\"x_test is empty\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "5. Training "
+   ]
   },
   {
    "cell_type": "code",
