table of contents

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -25,7 +25,12 @@
     "-[Reading the Data](#reading-the-data)\n",
     "-[Data Preparation ](#data-preparation) \n",
     "-[Normalization and Data Augmentation](#normalization-and-data-augmentation) \n",
-    "-[Training my model ](#training-my-model )\n",
+    "-[Training my model ](#training-my-model)\n",
+    "-[Predictions](predictions)\n",
+    "-[Hyper-parameters tuning with k-folds](#hyper-parameters-tuning-with-k-folds)\n",
+    "    -[Random Search](#random-search)\n",
+    "    -[K folds Cross Validation](#K-folds-cross-validation )       \n",
+    "-[Conclusion](#Conclusion)\n",
     "      "
    ]
   },
@@ -722,7 +727,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#predictions using the trained model\n",
     "predictions = (model.predict(x_test) > 0.5).astype(\"int32\") \n",
     "predictions = predictions.reshape(1,-1)[0]\n",
     "predictions[:15]\n",
@@ -755,26 +760,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "correct = np.nonzero(predictions == y_test)[0]\n",
-    "incorrect = np.nonzero(predictions != y_test)[0]"
+    "My deep learning model demonstrates strong performance in detecting Pneumonia cases, achieving high precision and recall. However, there is room for improvement in detecting Normal cases, as the recall for Class 1 is relatively lower. Further optimization and fine-tuning of the model may lead to even better results, ultimately enhancing its utility in medical diagnostics and patient care."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct = np.nonzero(predictions == y_test)[0] #\n",
+    "#correct contains the indices where the predicted values match the actual values (true positives and true negatives)\n",
+    "\n",
+    "incorrect = np.nonzero(predictions != y_test)[0]\n",
+    "#incorrect contains the indices where the predicted values do not match the actual values (false positives and false negatives)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_9596\\1245753600.py:4: MatplotlibDeprecationWarning: Auto-removal of overlapping axes is deprecated since 3.6 and will be removed two minor releases later; explicitly call ax.remove() as needed.\n",
-      "  plt.subplot(3,2,i+1)\n"
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_9596\\4096829535.py:3: MatplotlibDeprecationWarning: Auto-removal of overlapping axes is deprecated since 3.6 and will be removed two minor releases later; explicitly call ax.remove() as needed.\n",
+      "  plt.subplot(3,2,i+1) #prep the subplot in a 3x2 grid\n"
      ]
     },
     {
@@ -789,16 +804,16 @@
     }
    ],
    "source": [
-    "#Some of the Correctly Predicted Classes\n",
+    "\n",
     "i = 0\n",
-    "for c in correct[:6]:\n",
-    "    plt.subplot(3,2,i+1)\n",
-    "    plt.xticks([])\n",
-    "    plt.yticks([])\n",
-    "    plt.imshow(x_test[c].reshape(150,150), cmap=\"gray\", interpolation='none')\n",
+    "for c in correct[:6]: #iterate through the first 6 correct predictions\n",
+    "    plt.subplot(3,2,i+1) #prep the subplot in a 3x2 grid\n",
+    "    plt.xticks([]) #remove x and y axis tick marks\n",
+    "    plt.yticks([]) \n",
+    "    plt.imshow(x_test[c].reshape(150,150), cmap=\"gray\", interpolation='none') #display the image corresponding\n",
     "    plt.title(\"Predicted Class {},Actual Class {}\".format(predictions[c], y_test[c]))\n",
-    "    plt.tight_layout()\n",
-    "    i += 1\n",
+    "    plt.tight_layout() \n",
+    "    i += 1 #increment the subplot index for the next iteration\n",
     "     "
    ]
   },
