notebook is complete

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -75,15 +75,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metrics For Success  \n",
-    "\n"
+    "# g) Metrics For Success  \n",
+    "\n",
+    "To achieve a substantial increase in accuracy from the initial model architecture. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Importing Libraries"
+    "# 2. Importing Libraries"
    ]
   },
   {
@@ -113,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Reading the Data"
+    "# 3. Reading the Data"
    ]
   },
   {
@@ -139,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Data Preparation "
+    "# 4. Data Preparation "
    ]
   },
   {
@@ -226,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Normalization and Data Augmentation"
+    "# 5. Normalization and Data Augmentation"
    ]
   },
   {
@@ -380,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Training my model "
+    "# 6. Training my model "
    ]
   },
   {
@@ -647,7 +648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. The Analysis of Model Training"
+    "# 7. The Analysis of Model Training"
    ]
   },
   {
@@ -700,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Predictions"
+    "# 8. Predictions"
    ]
   },
   {
@@ -858,14 +859,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Hyper-parameters tuning with k-folds"
+    "# 9. Hyper-parameters tuning with k-folds"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "i) Random Search "
+    "# i) Random Search "
    ]
   },
   {
@@ -1041,7 +1042,7 @@
     "            metrics=['accuracy']\n",
     "        )\n",
     "        return model\n",
-    "\n",
+    "#creating an instance of the custom HyperModel\n",
     "hypermodel = CNNHyperModel(input_shape=INPUT_SHAPE, num_classes=NUM_CLASSES)"
    ]
   },
@@ -1221,7 +1222,14 @@
     }
    ],
    "source": [
-    "tuner.search(X_train, Y_train, epochs=15, validation_split=0.1)"
+    "#tuner.search(X_train, Y_train, epochs=15, validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best model found during the hyperparameter tuning process achieved a validation accuracy of approximately 95.21%. This is the highest accuracy observed among all the trials. The total time taken for the hyperparameter tuning process is around 6 hours and 51 minutes."
    ]
   },
   {
@@ -1464,7 +1472,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ii) K folds Cross Validation "
+    "Among the top-performing trials in the hyperparameter optimization process for the chest X-ray classification model, Trial 0038 stands out as one of the most successful configurations. This trial achieved an impressive validation accuracy of 95.21%. Its hyperparameter settings included 128 filters in the second convolutional layer, a dropout rate of 0.05, 64 filters in the third convolutional layer with no dropout, 384 units in the first dense layer using the ReLU activation function, a dropout rate of 0.2 in the first dense layer, 160 units in the second dense layer with a sigmoid activation function, and a dropout rate of 0.35 in the second dense layer. The learning rate was set to 0.0015, and the trial ran for 5 epochs. These results demonstrate the effectiveness of this configuration in achieving a high level of accuracy in classifying chest X-ray images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ii) K folds Cross Validation "
    ]
   },
   {
@@ -1524,7 +1539,7 @@
     "pat = 5 #this is the number of epochs with no improvment after which the training will stop\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=pat, verbose=1)\n",
     "\n",
-    "#define the model checkpoint callback -> this will keep on saving the model as a physical file\n",
+    "#define the model checkpoint callback -> this will save the model as a physical file\n",
     "model_checkpoint = ModelCheckpoint('/content/drive/MyDrive/Project-Deep', verbose=1, save_best_only=True)\n",
     "\n",
     "#define a function to fit the model\n",
@@ -2004,7 +2019,7 @@
     "epochs=20\n",
     "batch_size=32\n",
     "\n",
-    "#save the model history in a list after fitting so that we can plot later\n",
+    "#save the model history in a list after fitting so that I can plot later\n",
     "model_history = [] \n",
     "\n",
     "for i in range(n_folds):\n",
@@ -2078,7 +2093,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Conclusion  "
+    "# 10. Conclusion  \n",
+    "\n",
+    "As I embarked on this captivating journey into the realm of modern healthcare, I was profoundly driven by the incredible possibilities that arise from the fusion of cutting-edge technology and medical expertise. My focus revolved around the application of image-based deep learning, an innovative approach poised to revolutionize medical diagnostics. At the heart of this journey was the utilization of image-based deep learning to address the critical need for timely disease diagnosis and management. To kickstart the project, I meticulously curated a dataset, handpicking it for its relevance and accuracy, which featured a diverse range of chest X-ray images representing two fundamental categories: Pneumonia and Normal. In terms of metrics, my journey started with a model architecture that yielded an accuracy of approximately 80%. However, through meticulous exploration of various hyperparameter configurations and the application of a convolutional neural network (CNN) architecture, I achieved remarkable progress. One standout achievement was Trial 0038, which reached an exceptional validation accuracy of 95.21%. This particular trial's hyperparameter settings, including 128 filters in the second convolutional layer, minimal dropout, and specific choices of activation functions, demonstrated the model's outstanding ability to distinguish between pneumonia and normal cases in chest X-ray images. "
    ]
   },
   {
