--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -4,33 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizing Image-Based Deep Learning to Detect Medical Diagnoses and Manage Treatable Diseases"
+    "# Utilizing Image-Based Deep Learning to Detect Medical Diagnoses and Manage Treatable Diseases"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Table of Contents \n",
     "\n",
-    "-[Business Understanding](#business-understanding)\n",
-    "    -[Introduction](#introduction)\n",
-    "    -[Problem Statement](#problem-statement)\n",
-    "    -[Main Objective](#main-objective) \n",
-    "    -[Data Understanding](#data-understanding)\n",
-    "    -[Metrics For Success](#metrics-for-success)\n",
-    "-[Importing Libraries](#importing-libraries) \n",
-    "-[Reading the Data](#reading-the-data)\n",
-    "-[Data Preparation ](#data-preparation) \n",
-    "-[Normalization and Data Augmentation](#normalization-and-data-augmentation) \n",
-    "-[Training my model ](#training-my-model)\n",
-    "-[Predictions](predictions)\n",
-    "-[Hyper-parameters tuning with k-folds](#hyper-parameters-tuning-with-k-folds)\n",
-    "    -[Random Search](#random-search)\n",
-    "    -[K folds Cross Validation](#K-folds-cross-validation )       \n",
-    "-[Conclusion](#Conclusion)\n",
+    "- [Business Understanding](#business-understanding) \n",
+    "- [Introduction](#introduction)\n",
+    "- [Problem Statement](#problem-statement)\n",
+    "- [Main Objective](#main-objective) \n",
+    "- [Data Understanding](#data-understanding)\n",
+    "- [Metrics For Success](#metrics-for-success)\n",
+    "- [Importing Libraries](#importing-libraries) \n",
+    "- [Reading the Data](#reading-the-data)\n",
+    "- [Data Preparation ](#data-preparation) \n",
+    "- [Normalization and Data Augmentation](#normalization-and-data-augmentation) \n",
+    "- [Training my model ](#training-my-model)\n",
+    "- [Predictions](predictions)\n",
+    "- [Hyper-parameters tuning with k-folds](#hyper-parameters-tuning-with-k-folds)\n",
+    "- [Random Search](#random-search)\n",
+    "- [K folds Cross Validation](#K-folds-cross-validation )       \n",
+    "- [Conclusion](#Conclusion)\n",
     "      "
    ]
   },
@@ -1222,7 +1220,7 @@
     }
    ],
    "source": [
-    "#tuner.search(X_train, Y_train, epochs=15, validation_split=0.1)"
+    "tuner.search(X_train, Y_train, epochs=15, validation_split=0.1)"
    ]
   },
   {
